tests/syntax/bad/testfile-semicolon-4.scala

class A { var x = 1 var y = 2 }
object Main { def main(args: Array[String]) { } }
